--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
 	
 	"about" : {
 		"info" : "Spotify Build 13 Mei 2023",
-		"url" : "https://www.spotify.com/id/redirect-in-app/android_premium_promotion/?offerSlug=samsung-global2022-pdp-3m-3m-trial-one-time-code"
+		"url" : "https://www.spotify.com/id-en/purchase/offer/default-referral-trial-2m/?flow_id=35c4f1bc-990d-4587-b515-086ca0e93227%3A1685711865&country=TR"
 		},
 	
 	"Setting" : {
@@ -17,7 +17,7 @@
 		},
 	
 	"Spotify" : {
-		"password" : "Tahaluindo",
+		"password" : "Duds12345",
 		"apikey_spotify" : "a2d4b979dc624757b4fb47de483f3505"
 		}
 
