--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
 		},
 	
 	"Spotify" : {
-		"password" : "Tahaluindo",
+		"password" : "Dud12345",
 		"apikey_spotify" : "a2d4b979dc624757b4fb47de483f3505"
 		}
 
