--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
 	
 	"about" : {
 		"info" : "Spotify Build 13 Mei 2023",
-		"url" : "https://www.spotify.com/id/redirect-in-app/android_premium_promotion/?offerSlug=samsung-global2022-pdp-3m-3m-trial-one-time-code"
+		"url" : "https://www.spotify.com/id-id/signup?forward_url=https%3A%2F%2Fopen.spotify.com%2F__noul__%2Fintl-id%23menu"
 		},
 	
 	"Setting" : {
